--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -132,7 +132,7 @@
 
 .sidebar_rightside_container{
     position: absolute;
-    top: 9%;
+    top: 66px;
     left: 10%;
     z-index: 1;
     display: flex;
@@ -141,6 +141,8 @@
     overflow: hidden;
     height: 80%;
     overflow-y: scroll;
+    border-radius: 10px;
+
 }
 .programs_sidebar_container{
     background: #d1f0f3;
