--- a/src/Home/Section/Programs/program.css
+++ b/src/Home/Section/Programs/program.css
@@ -59,15 +59,15 @@
     text-transform: uppercase;
 }
 
-.all_card_program_container{
+.all_card_program_container {
     display: flex;
     flex-wrap: wrap;
     gap: 20px;
 }
 
-.card_container{
-    width: 48%;
-    border: 1px solid rgba(60,72,82,.5);
+.card_container {
+    width: 40%;
+    border: 1px solid rgba(60, 72, 82, .5);
     overflow: hidden;
     display: flex;
     flex-direction: column;
@@ -77,17 +77,19 @@
     position: relative;
     background: #fff;
 }
-.card_img_container img{
+
+.card_img_container img {
     width: 100%;
 }
-.img_title_card_container{
+
+.img_title_card_container {
     display: flex;
     align-items: center;
     justify-content: space-evenly;
     width: 90%;
     margin: 0 auto;
     background: var(--white-color);
-    box-shadow: 0 4px 24px rgba(60,72,82,.15);
+    box-shadow: 0 4px 24px rgba(60, 72, 82, .15);
     border-radius: 4px;
     margin: 0 auto;
     position: absolute;
@@ -95,20 +97,24 @@
     left: 5%;
     padding: 10px 13px;
 }
-.img_title_card_container img{
+
+.img_title_card_container img {
     width: 100px;
 }
-.img_title_card_container p{
+
+.img_title_card_container p {
     font-size: 12px;
     font-weight: 600;
     color: var(--primary-color);
     width: auto;
     padding: 0 0 0 15px;
 }
-.card_content_container{
+
+.card_content_container {
     padding: 3.5rem 1rem 1.5rem;
 }
-.card_content_container p:first-child{
+
+.card_content_container p:first-child {
     font-size: 18px;
     line-height: 24px;
     font-style: normal;
@@ -116,7 +122,8 @@
     font-weight: 600;
     color: #3c4852;
 }
-.card_desc_text{
+
+.card_desc_text {
     font-style: normal;
     font-weight: 400;
     font-size: 14px;
@@ -126,7 +133,7 @@
     opacity: .75;
 }
 
-.card_time_period_text{
+.card_time_period_text {
     margin: 8px 0 auto;
     color: #3c4852;
     font-size: 14px;
@@ -136,15 +143,16 @@
     opacity: .75;
 }
 
-.rating_score_container{
+.rating_score_container {
     margin: 16px 0;
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
     align-items: center;
-    gap:10px;
+    gap: 10px;
 }
-.rating_score_container span{
+
+.rating_score_container span {
     font-weight: 600;
     font-size: 18px;
     line-height: 24px;
@@ -152,13 +160,14 @@
     padding-left: 4px;
 }
 
-.two_btn_apply_know_container{
+.two_btn_apply_know_container {
     display: flex;
     align-items: center;
     width: 100%;
     justify-content: center;
 }
-.two_btn_apply_know_container button:first-child{
+
+.two_btn_apply_know_container button:first-child {
     width: 45%;
     font-size: 16px;
     line-height: 22px;
@@ -166,17 +175,18 @@
     color: #fff;
     background: var(--primary-color);
     border: 0;
-    margin:0  auto;
+    margin: 0 auto;
     padding: 10px;
     border-radius: 5px;
     cursor: pointer;
 }
-.two_btn_apply_know_container button:last-child{
+
+.two_btn_apply_know_container button:last-child {
     width: 45%;
     background-color: #fff;
     border: 1px solid #035642;
     border-radius: 4px;
-    margin:0  auto;
+    margin: 0 auto;
     font-size: 16px;
     line-height: 22px;
     display: flex;
