--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -16,11 +16,12 @@
 .logo_container {
     width: 200px;
 }
+
 .logo_container img {
     width: 100%;
 }
 
-.all_programs_btn{
+.all_programs_btn {
     cursor: pointer;
     text-decoration: none;
     font-size: 15px;
@@ -38,27 +39,34 @@
     position: relative;
     background-color: var(--primary-color);
 }
-.activeStyle{
+
+.activeStyle {
     background: #fff;
     margin: 0 0 0 20px;
     border-radius: 20px 0 0 20px;
 }
+
 .navs_link_container {
     display: flex;
     align-items: center;
     gap: 20px;
 }
-.job_icon_title_container{
+
+.job_icon_title_container {
     background-color: transparent;
     display: flex;
-    gap:10px;
+    gap: 10px;
     align-items: center;
 }
+
 .navs_link_container ul {
     display: flex;
     align-items: center;
-    gap: 10px;
+    gap: 20px;
+    font-size: 18px;
+    font-weight: 500;
 }
+
 
 .menu_container {
     display: none;
@@ -130,7 +138,7 @@
     cursor: pointer;
 }
 
-.sidebar_rightside_container{
+.sidebar_rightside_container {
     position: absolute;
     top: 66px;
     left: 10%;
@@ -144,7 +152,8 @@
     border-radius: 10px;
 
 }
-.programs_sidebar_container{
+
+.programs_sidebar_container {
     background: #d1f0f3;
     width: 30%;
     display: flex;
@@ -154,7 +163,8 @@
     bottom: 0;
 
 }
-.programs_sidebar_container > div{
+
+.programs_sidebar_container>div {
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -164,7 +174,8 @@
     margin: 5px 0;
     cursor: pointer;
 }
-.rightside_container{
+
+.rightside_container {
     background-color: var(--white-color);
     display: flex;
     flex-direction: row;
@@ -173,30 +184,35 @@
     gap: 22px;
     padding: 15px 30px;
 }
-.programs_title_img_content_container{
+
+.programs_title_img_content_container {
     width: 48%;
     display: flex;
     flex-direction: column;
     gap: 15px;
 }
-.programs_title_img_content_container > p{
+
+.programs_title_img_content_container>p {
     font-size: 18px;
     font-weight: 600;
     margin: 0 0 10px 0;
 
 }
-.pragrams_logo_title_container{
+
+.pragrams_logo_title_container {
     display: flex;
     align-items: center;
     gap: 15px;
     cursor: pointer;
 
 }
-.pragrams_logo_title_container img{
+
+.pragrams_logo_title_container img {
     width: 50px;
-    
+
 }
-.pragrams_logo_title_container p{
+
+.pragrams_logo_title_container p {
     font-size: 16px;
     line-height: 22px;
     color: var(--primary-color);
@@ -262,7 +278,7 @@
         margin: 0 0 0 auto;
     }
 
-    .all_programs_btn{
+    .all_programs_btn {
         width: fit-content;
         height: auto;
         font-size: 13px;
@@ -296,10 +312,11 @@
 }
 
 @media (min-width:767px) {
+
     /* .logo_container {
         width: 100px;
     } */
-    .nav_main_container{
+    .nav_main_container {
         padding: 10px;
     }
 }
